feat: Add Vanta.js animated clouds background and fix CORS config